// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test form linter should return error FORM.CONTENT_HORIZONTAL_SPACE_IS_INVALID 0 1`] = `
Array [
  Object {
    "code": "FORM.CONTENT_HORIZONTAL_SPACE_IS_INVALID",
    "error": "Горизонтальный внутренний отступ контентного элемента должен задаваться
        с помощью модификатора space-h на 1 шаг больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 6,
        "line": 8,
      },
      "start": Object {
        "column": 16,
        "line": 3,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.CONTENT_HORIZONTAL_SPACE_IS_INVALID 1 1`] = `
Array [
  Object {
    "code": "FORM.CONTENT_HORIZONTAL_SPACE_IS_INVALID",
    "error": "Горизонтальный внутренний отступ контентного элемента должен задаваться
        с помощью модификатора space-h на 1 шаг больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 6,
        "line": 8,
      },
      "start": Object {
        "column": 16,
        "line": 3,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.CONTENT_ITEM_INDENT_IS_INVALID 0 1`] = `
Array [
  Object {
    "code": "FORM.CONTENT_ITEM_INDENT_IS_INVALID",
    "error": "Модификатора indent-b у элементов формы content-item должен быть на 1 шаг больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 14,
        "line": 12,
      },
      "start": Object {
        "column": 13,
        "line": 7,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.CONTENT_ITEM_INDENT_IS_INVALID 1 1`] = `
Array [
  Object {
    "code": "FORM.CONTENT_ITEM_INDENT_IS_INVALID",
    "error": "Модификатора indent-b у элементов формы content-item должен быть на 1 шаг больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 14,
        "line": 12,
      },
      "start": Object {
        "column": 13,
        "line": 7,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.CONTENT_VERTICAL_SPACE_IS_INVALID 0 1`] = `
Array [
  Object {
    "code": "FORM.CONTENT_VERTICAL_SPACE_IS_INVALID",
    "error": "Вертикальный внутренний отступ контентного элемента со значением space-v
        должен быть на 2 шага больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 6,
        "line": 8,
      },
      "start": Object {
        "column": 16,
        "line": 3,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.CONTENT_VERTICAL_SPACE_IS_INVALID 1 1`] = `
Array [
  Object {
    "code": "FORM.CONTENT_VERTICAL_SPACE_IS_INVALID",
    "error": "Вертикальный внутренний отступ контентного элемента со значением space-v
        должен быть на 2 шага больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 6,
        "line": 8,
      },
      "start": Object {
        "column": 16,
        "line": 3,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.FOOTER_HORIZONTAL_SPACE_IS_INVALID 0 1`] = `
Array [
  Object {
    "code": "FORM.FOOTER_HORIZONTAL_SPACE_IS_INVALID",
    "error": "Горизонтальный внутренний отступ должен быть на 1 шаг больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 10,
        "line": 14,
      },
      "start": Object {
        "column": 9,
        "line": 10,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.FOOTER_HORIZONTAL_SPACE_IS_INVALID 1 1`] = `
Array [
  Object {
    "code": "FORM.FOOTER_HORIZONTAL_SPACE_IS_INVALID",
    "error": "Горизонтальный внутренний отступ должен быть на 1 шаг больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 10,
        "line": 14,
      },
      "start": Object {
        "column": 9,
        "line": 10,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.FOOTER_TEXT_SIZE_IS_INVALID 0 1`] = `
Array [
  Object {
    "code": "FORM.FOOTER_TEXT_SIZE_IS_INVALID",
    "error": "Размер текстовых блоков в подвале должен соответствовать эталонному",
    "location": Object {
      "end": Object {
        "column": 18,
        "line": 19,
      },
      "start": Object {
        "column": 17,
        "line": 14,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.FOOTER_TEXT_SIZE_IS_INVALID 1 1`] = `
Array [
  Object {
    "code": "FORM.FOOTER_TEXT_SIZE_IS_INVALID",
    "error": "Размер текстовых блоков в подвале должен соответствовать эталонному",
    "location": Object {
      "end": Object {
        "column": 14,
        "line": 18,
      },
      "start": Object {
        "column": 24,
        "line": 13,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.FOOTER_VERTICAL_SPACE__IS_INVALID 0 1`] = `
Array [
  Object {
    "code": "FORM.FOOTER_VERTICAL_SPACE_IS_INVALID",
    "error": "Вертикальный внутренний отступ должен быть на 1 шаг больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 10,
        "line": 14,
      },
      "start": Object {
        "column": 9,
        "line": 10,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.FOOTER_VERTICAL_SPACE__IS_INVALID 1 1`] = `
Array [
  Object {
    "code": "FORM.FOOTER_VERTICAL_SPACE_IS_INVALID",
    "error": "Вертикальный внутренний отступ должен быть на 1 шаг больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 10,
        "line": 14,
      },
      "start": Object {
        "column": 9,
        "line": 10,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.HEADER_HORIZONTAL_SPACE_IS_INVALID 0 1`] = `
Array [
  Object {
    "code": "FORM.HEADER_HORIZONTAL_SPACE_IS_INVALID",
    "error": "Горизонтальный внутренний отступ должен быть на 1 шаг больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 10,
        "line": 8,
      },
      "start": Object {
        "column": 9,
        "line": 4,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.HEADER_HORIZONTAL_SPACE_IS_INVALID 1 1`] = `
Array [
  Object {
    "code": "FORM.HEADER_HORIZONTAL_SPACE_IS_INVALID",
    "error": "Горизонтальный внутренний отступ должен быть на 1 шаг больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 10,
        "line": 8,
      },
      "start": Object {
        "column": 9,
        "line": 4,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.HEADER_TEXT_SIZE_IS_INVALID 0 1`] = `
Array [
  Object {
    "code": "FORM.HEADER_TEXT_SIZE_IS_INVALID",
    "error": "Все текстовые блоки в заголовке формы (элемент header) должны быть со значением
        модификатора size на 2 шага больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 14,
        "line": 12,
      },
      "start": Object {
        "column": 24,
        "line": 7,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.HEADER_TEXT_SIZE_IS_INVALID 1 1`] = `
Array [
  Object {
    "code": "FORM.HEADER_TEXT_SIZE_IS_INVALID",
    "error": "Все текстовые блоки в заголовке формы (элемент header) должны быть со значением
        модификатора size на 2 шага больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 18,
        "line": 19,
      },
      "start": Object {
        "column": 17,
        "line": 14,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.HEADER_VERTICAL_SPACE_IS_INVALID 0 1`] = `
Array [
  Object {
    "code": "FORM.HEADER_VERTICAL_SPACE_IS_INVALID",
    "error": "Горизонтальный внутренний отступ должен быть на 1 шаг больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 10,
        "line": 8,
      },
      "start": Object {
        "column": 9,
        "line": 4,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.HEADER_VERTICAL_SPACE_IS_INVALID 1 1`] = `
Array [
  Object {
    "code": "FORM.HEADER_VERTICAL_SPACE_IS_INVALID",
    "error": "Горизонтальный внутренний отступ должен быть на 1 шаг больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 10,
        "line": 8,
      },
      "start": Object {
        "column": 9,
        "line": 4,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.INPUT_AND_LABEL_SIZES_SHOULD_BE_EQUAL for 0 1`] = `
Array [
  Object {
    "code": "FORM.INPUT_AND_LABEL_SIZES_SHOULD_BE_EQUAL",
    "error": "Подписи и поля должны быть одного размера",
    "location": Object {
      "end": Object {
        "column": 2,
        "line": 17,
      },
      "start": Object {
        "column": 1,
        "line": 1,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.INPUT_AND_LABEL_SIZES_SHOULD_BE_EQUAL for 1 1`] = `
Array [
  Object {
    "code": "FORM.INPUT_AND_LABEL_SIZES_SHOULD_BE_EQUAL",
    "error": "Подписи и поля должны быть одного размера",
    "location": Object {
      "end": Object {
        "column": 2,
        "line": 7,
      },
      "start": Object {
        "column": 1,
        "line": 1,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.INPUT_AND_LABEL_SIZES_SHOULD_BE_EQUAL for 2 1`] = `
Array [
  Object {
    "code": "FORM.INPUT_AND_LABEL_SIZES_SHOULD_BE_EQUAL",
    "error": "Подписи и поля должны быть одного размера",
    "location": Object {
      "end": Object {
        "column": 2,
        "line": 10,
      },
      "start": Object {
        "column": 1,
        "line": 1,
      },
    },
  },
  Object {
    "code": "FORM.INPUT_AND_LABEL_SIZES_SHOULD_BE_EQUAL",
    "error": "Подписи и поля должны быть одного размера",
    "location": Object {
      "end": Object {
        "column": 10,
        "line": 8,
      },
      "start": Object {
        "column": 9,
        "line": 4,
      },
    },
  },
]
`;

exports[`test form linter should return several errors 0 1`] = `
Array [
  Object {
    "code": "FORM.CONTENT_VERTICAL_SPACE_IS_INVALID",
    "error": "Вертикальный внутренний отступ контентного элемента со значением space-v
        должен быть на 2 шага больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 6,
        "line": 12,
      },
      "start": Object {
        "column": 16,
        "line": 3,
      },
    },
  },
  Object {
    "code": "FORM.CONTENT_HORIZONTAL_SPACE_IS_INVALID",
    "error": "Горизонтальный внутренний отступ контентного элемента должен задаваться
        с помощью модификатора space-h на 1 шаг больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 6,
        "line": 12,
      },
      "start": Object {
        "column": 16,
        "line": 3,
      },
    },
  },
]
`;

exports[`test form linter should return several errors 1 1`] = `
Array [
  Object {
    "code": "FORM.CONTENT_HORIZONTAL_SPACE_IS_INVALID",
    "error": "Горизонтальный внутренний отступ контентного элемента должен задаваться
        с помощью модификатора space-h на 1 шаг больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 10,
        "line": 9,
      },
      "start": Object {
        "column": 9,
        "line": 4,
      },
    },
  },
  Object {
    "code": "FORM.FOOTER_VERTICAL_SPACE_IS_INVALID",
    "error": "Вертикальный внутренний отступ должен быть на 1 шаг больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 10,
        "line": 14,
      },
      "start": Object {
        "column": 9,
        "line": 10,
      },
    },
  },
]
`;
